force-app/main/default/objects/DeliveryNumber__c/DeliveryNumber__c.object-meta.xml
<CustomObject>
    <label>Delivery Note</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Number</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>