force-app/main/default/objects/DeliveryNumber__c/fields/Creator_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Creator_Delivery__c</fullName>
    <label>Creator Delivery</label>
    <length>12</length>
    <type>Text</type>
</CustomField>