force-app/main/default/objects/DeliveryNumber__c/fields/Creator_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Creator_Delivery_Date__c</fullName>
    <label>Creator Delivery Date</label>
    <type>Date</type>
</CustomField>