force-app/main/default/objects/DeliveryNumber__c/fields/Creator_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Creator_Delivery_Time__c</fullName>
    <label>Creator Delivery Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>