force-app/main/default/objects/DeliveryNumber__c/fields/Delivery_Category__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Category__c</fullName>
    <label>Delivery Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Category</valueSetName>
    </valueSet>
</CustomField>