force-app/main/default/objects/DeliveryNumber__c/fields/Delivery_Note_Num__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Num__c</fullName>
    <label>Delivery Note Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>