force-app/main/default/objects/DeliveryNumber__c/fields/Delivery_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Post_Date__c</fullName>
    <label>Delivery Post Date</label>
    <type>Date</type>
</CustomField>