force-app/main/default/objects/DeliveryNumber__c/fields/Is_Invoice_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Invoice_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is POD Uploaded</label>
    <type>Checkbox</type>
</CustomField>