force-app/main/default/objects/DeliveryNumber__c/fields/Over_20days__c.field-meta.xml
<CustomField>
    <fullName>Over_20days__c</fullName>
    <description>The calculation to determine whether the invoice has been uploaded within 20 days.</description>
    <formula>(TODAY()-Delivery_Post_Date__c) &gt; 20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over 20days</label>
    <type>Checkbox</type>
</CustomField>